2003-06-16  Nick Drochak <ndrochak@gol.com>

        * ResourceReaderTest.cs: Help tests find input files.

2003-01-28  Nick Drochak <ndrochak@gol.com>

        * ResourceReaderTest.cs: Ignore part of a test that hangs mono.

2002-12-21  Nick Drochak <ndrochak@gol.com>

	* all: make tests build and run under nunit2

2002/06/14  Nick Drochak <ndrochak@gol.com>

	* AllTests.cs: Disable ResourceReaderTest for now.  The class is not
	ready yet.

2002-05-22  Nick Drochak  <ndrochak@gol.com>

	* ResourceReaderTest.cs: Fix path name to resource files (again).

2002-02-09  Nick Drochak  <ndrochak@gol.com>

	* ResourceReaderTest.cs: Fix path name to resource files

2002-01-25  Nick Drochak  <ndrochak@gol.com>

	* AllTests.cs:
	* Empty.resources:
	* MyResources.resources: Added files
	* ResourceReaderTest.cs: Test the enumerator

2002-01-24  Nick Drochak  <ndrochak@gol.com>

	* ResourceReaderTest.cs: Add new file. This test is not done yet.
	Wanted to save it in cvs for 'disaster recovery' purposes.
	Just in case.
